// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render Header should render without crashing 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#ebebeb",
      "flexDirection": "row",
      "justifyContent": "flex-end",
      "padding": 10,
    }
  }
>
  <View>
    <TouchableWithoutFeedback
      hitSlop={
        Object {
          "bottom": 20,
          "left": 20,
          "right": 40,
          "top": 20,
        }
      }
      id="header-back-button"
      onPress={[Function]}
    >
      <Icon
        allowFontScaling={false}
        name="arrow-back"
        size={12}
        style={
          Object {
            "color": "#232323",
            "fontSize": 25,
            "marginLeft": 10,
          }
        }
      />
    </TouchableWithoutFeedback>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "flex-end",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#232323",
          "fontSize": 25,
          "marginLeft": 10,
        }
      }
    >
      Test
    </Text>
  </View>
</View>
`;

exports[`Render Header with rightActions should render without crashing 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#ebebeb",
      "flexDirection": "row",
      "justifyContent": "flex-end",
      "padding": 10,
    }
  }
>
  <View>
    <TouchableWithoutFeedback
      hitSlop={
        Object {
          "bottom": 20,
          "left": 20,
          "right": 40,
          "top": 20,
        }
      }
      id="header-back-button"
      onPress={[Function]}
    >
      <Icon
        allowFontScaling={false}
        name="arrow-back"
        size={12}
        style={
          Object {
            "color": "#232323",
            "fontSize": 25,
            "marginLeft": 10,
          }
        }
      />
    </TouchableWithoutFeedback>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "flex-end",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#232323",
          "fontSize": 25,
          "marginLeft": 10,
        }
      }
    >
      Test
    </Text>
  </View>
  <PopupMenu
    onPress={[MockFunction]}
  />
</View>
`;
